syntax = "proto3";

package transfer;

option go_package = "github.com/fa0311/file-transfer-system/api/proto";

service FileTransfer {
  rpc Transfer(stream FileChunk) returns (stream TransferResponse) {}
  rpc DeleteFile(DeleteRequest) returns (DeleteResponse) {}
}

message FileChunk {
  string file_path = 1;
  bytes data = 2;
  int64 offset = 3;
  int64 total_size = 4;
  string checksum = 5;
  bool is_last = 6;
}

message TransferResponse {
  bool success = 1;
  string message = 2;
  int64 bytes_transferred = 3;
}

message DeleteRequest {
  string file_path = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
